--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,16 +21,14 @@
 			  <%#= link_to "Clients", new_client_path, :class=>"navbar-brand" %>
 			  
             <ul class="nav navbar-nav">
-              
             </ul>
-            
-		    <ul class="nav navbar-nav pull-right">
+            <ul class="nav navbar-nav pull-right">
 		             <li><%#= link_to "Home", root_path %></li>
 		             <li><%#= link_to "Help", help_path %></li>
 		             <% if  signed_in?%>
 		               <li><%#= link_to "Users", '#' %></li>
 		               <li id="fat-menu" class="dropdown">
-						 <%= link_to "Sign out", signout_path, method: "delete" %>
+						 <%#= link_to "Sign out", signout_path, method: "delete" %>
 		                 <ul class="dropdown-menu">
 		                   <li><%#= link_to "Profile", current_user %></li>
 		                   <li><%= link_to "Settings", '#' %></li>
