--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,8 @@
           <div class="nav-collapse collapse">
   			  <%#= render 'devise/menu/registration_items' %>
   			  <%#= render 'devise/menu/login_items' %>
-			  <%#= link_to "Clients", new_client_path, :class=>"navbar-brand" %>
-			  
-            <ul class="nav navbar-nav">
+			  <%= link_to "Schools", new_school_path, :class=>"navbar-brand" %>
+			<ul class="nav navbar-nav">
             </ul>
             <ul class="nav navbar-nav pull-right">
 		             <li><%#= link_to "Home", root_path %></li>
