--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@school) do |f| %>
+<%= form_for(@school, :html=>{:class=>"form_validation"} ) do |f| %>
   <% if @school.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@school.errors.count, "error") %> prohibited this school from being saved:</h2>
@@ -12,43 +12,81 @@
   <% end %>
 
 <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-3">
         <div class="form-group" >
   		  	<div class="field">
-    			<%= f.label :code %><br>
+    			<%= f.label :code, "School Code" %><br>
     			<%= f.number_field :code %>
   		  	</div>
         </div>
-   </div>	
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+   </div>
+   <div class="col-lg-6">
+       <div class="form-group" >	
+  	       <div class="field">
+    		   <%= f.label :name, "School Name" %><br>
+    		   <%= f.text_field :name, :autofocus => true, :required=>true %>
+  		   </div>
+  		</div>
   </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_field :address %>
-  </div>
-  <div class="field">
-    <%= f.label :city %><br>
-    <%= f.text_field :city %>
-  </div>
-  <div class="field">
-    <%= f.label :district %><br>
-    <%= f.text_field :district %>
-  </div>
-  <div class="field">
-    <%= f.label :state %><br>
-    <%= f.text_field :state %>
-  </div>
-  <div class="field">
-    <%= f.label :country %><br>
-    <%= f.text_field :country %>
-  </div>
-  <div class="field">
-    <%= f.label :phone %><br>
-    <%= f.number_field :phone %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+</div>
+<div class="row">
+    <div class="col-lg-3">
+        <div class="form-group" >
+			<div class="field">
+	    		<%= f.label :district, "School District" %><br>
+	    		<%= f.text_field :district %>
+	  	  	</div>
+  	  	</div>
+    </div>
+    <div class="col-lg-3">
+        <div class="form-group" >
+ 	   	    <div class="field">
+			    <%= f.label :phone %><br>
+			    <%= f.text_field :phone %>
+ 	  	  	</div>
+   	  	</div>
+    </div>    	   
+</div>
+<div class="row">
+    <div class="col-lg-8">
+        <div class="form-group" >
+  		    <div class="field">
+    		    <%= f.label :address %><br>
+    			<%= f.text_field :address %>
+  			</div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-3">
+        <div class="form-group" >
+  		    <div class="field">
+    			<%= f.label :city %><br>
+    			<%= f.text_field :city %>
+  		  	</div>
+	    </div>
+	</div>
+    <div class="col-lg-3">
+        <div class="form-group" >
+		    <div class="field">
+		      <%= f.label :state %><br>
+		      <%= f.text_field :state %>
+		    </div>
+		</div>
+	</div>
+</div>
+<div class="row">
+    <div class="col-lg-3">
+        <div class="form-group" >  
+  		    <div class="field">
+    			<%= f.label :country %><br>
+    			<%= f.text_field :country %>
+  		    </div>
+		</div>
+	</div>
+</div>
+  	<div class="actions">
+    	<%= f.submit "Save", class: "btn btn-primary width_100px", data: { disable_with: 'Saving...' } %>
+		<%= link_to 'Cancel', schools_path, class: "btn btn-primary width_100px"%>
+  	</div>
 <% end %>
