--- a/app/views/schools/edit.html.erb
+++ b/app/views/schools/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing school</h1>
+<h3>Edit School</h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @school %> |
-<%= link_to 'Back', schools_path %>
+<%#= link_to 'Show', @school %> 
+<%#= link_to 'Back', schools_path %>
