--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -40,5 +40,7 @@
   <%= @school.phone %>
 </p>
 
-<%= link_to 'Edit', edit_school_path(@school) %> |
-<%= link_to 'Back', schools_path %>
+<%#= link_to 'Edit', edit_school_path(@school) %>
+<%#= link_to 'Back', schools_path %>
+<%= link_to 'Edit', edit_school_path(@school), class: "btn btn-primary width_100px", data: { disable_with: 'Saving...' } %>
+<%= link_to 'Cancel', schools_path, class: "btn btn-primary width_100px"%>
