--- a/app/assets/stylesheets/chosen.css
+++ b/app/assets/stylesheets/chosen.css
@@ -85,7 +85,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background: url('../images/chosen-sprite.png') no-repeat 0px 8px;
+  background: url('chosen-sprite.png') no-repeat 0px 8px;
 }
 .chosen-container-single .chosen-search {
   position: relative;
@@ -104,7 +104,7 @@
   height: auto;
   outline: 0;
   border: 1px solid #aaa;
-  background: #fff url('../images/icon-search.png') no-repeat 97% center;
+  background: #fff url('icon-search.png') no-repeat 97% center;
   font-size: 1em;
   font-family: sans-serif;
   line-height: normal;
@@ -234,7 +234,7 @@
   display: block;
   width: 12px;
   height: 12px;
-  background: url('../images/chosen-sprite.png') -42px 1px no-repeat;
+  background: url('chosen-sprite.png') -42px 1px no-repeat;
   font-size: 1px;
 }
 .chosen-container-multi .chosen-choices li.search-choice .search-choice-close:hover {
