--- a/app/assets/stylesheets/jquery-ui-1.10.3.css
+++ b/app/assets/stylesheets/jquery-ui-1.10.3.css
@@ -841,7 +841,7 @@ body .ui-tooltip {
 }
 
 .ui-datepicker-next {
-	background: url(../images/calendar-arrow.png) no-repeat 10px 5px;
+	background: url(calendar-arrow.png) no-repeat 10px 5px;
 }
 
 .ui-datepicker-next:hover {
@@ -852,7 +852,7 @@ body .ui-tooltip {
 }
 
 .ui-datepicker-prev {
-	background: url(../images/calendar-arrow.png) no-repeat 8px -80px;
+	background: url(calendar-arrow.png) no-repeat 8px -80px;
 }
 
 .ui-datepicker-prev:hover {
@@ -891,7 +891,7 @@ body .ui-tooltip {
 	border-left: 1px solid #ccc;
 	width: 32px;
 	background-repeat: no-repeat;
-	background-image: url(../images/dropdown-arrow.png);
+	background-image: url(dropdown-arrow.png);
 	cursor: pointer;
 }
 
