--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -225,7 +225,8 @@
       
 	<% flash.each do |key, value| %>
 		<div class="alert alert-<%= key %>"> <%= value %>
-        		<button class="close" data-dismiss="alert"></button>
+        		<!-- <button class="close" data-dismiss="alert"></button> -->
+				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
         	</div>
 	<% end %>
 	<%=yield %>
