--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -3,10 +3,6 @@
 	<div class="col-md-12">
 	    <div class="panel panel-default">
 	        <div class="panel-heading">
-	            <div class="panel-btns">
-	            	<!-- <a href="" class="panel-close">×</a>
-	            	<a href="" class="minimize">−</a> -->
-	            </div>
 	            <h4 class="panel-title">School Form</h4>
 	            <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
@@ -84,8 +80,12 @@
 	            <div class="row">
 					<div class="col-sm-6">
 	                    <div class="form-group">
-							<%= lic.label :expiry_date, :class=>"control-label"  %>
-							<%= lic.text_field :expiry_date, :class=>"form-control" %>
+							<div class="input-group">
+								<%= lic.label :expiry_date, :class=>"control-label"  %>
+								<%= lic.text_field :expiry_date, :class=>"form-control", :placeholder=>"mm/dd/yyyy", :id=>"datepicker" %>
+			                  <!-- <input type="text" class="form-control" placeholder="mm/dd/yyyy" id="datepicker"> -->
+			                  <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+			                </div>
 						</div>
 	                </div>
 				</div>
@@ -101,10 +101,26 @@
 	        </div><!-- panel-body -->
 	        <div class="panel-footer" data-no-turbolink>
 	            <%= f.submit "Save", class: "btn btn-primary", data: { disable_with: 'Saving...' } %>
-				<%= link_to 'Cancel', schools_path, class: "btn btn-primary"%>
+				<%= link_to 'Cancel', schools_path, class: "btn btn-white"%>
 	        </div>
 			<% end %>
 	    </div>
     </div>       
 </div>
 
+<script>
+jQuery(document).ready(function(){
+    
+   // Date Picker
+  jQuery('#datepicker').datepicker();
+  
+  jQuery('#datepicker-inline').datepicker();
+  
+  jQuery('#datepicker-multiple').datepicker({
+    numberOfMonths: 3,
+    showButtonPanel: true
+  });
+  
+
+});
+</script>
