--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -10,7 +10,7 @@
 				<%= form_for(@school, :html=>{:class=>"form_validation"} ) do |f| %>
 				    <% if @school.errors.any? %>
 				    <div id="error_explanation">
-				        <h2><%= pluralize(@school.errors.count, "error") %> prohibited this school from being saved:</h2>
+				        <h4><%= pluralize(@school.errors.count, "error") %> prohibited this school from being saved:</h4>
 				        <ul>
 				            <% @school.errors.full_messages.each do |msg| %>
 				                <li><%= msg %></li>
@@ -80,9 +80,9 @@
 	            <div class="row">
 					<div class="col-sm-6">
 	                    <div class="form-group">
+							<%= lic.label :expiry_date, :class=>"control-label"  %>
 							<div class="input-group">
-								<%= lic.label :expiry_date, :class=>"control-label"  %>
-								<%= lic.text_field :expiry_date, :class=>"form-control", :placeholder=>"mm/dd/yyyy", :id=>"datepicker" %>
+								<%= lic.text_field :expiry_date, :class=>"form-control", :placeholder=>"yyyy-mm-dd", :id=>"datepicker" %>
 			                  <!-- <input type="text" class="form-control" placeholder="mm/dd/yyyy" id="datepicker"> -->
 			                  <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 			                </div>
@@ -112,15 +112,8 @@
 jQuery(document).ready(function(){
     
    // Date Picker
-  jQuery('#datepicker').datepicker();
-  
-  jQuery('#datepicker-inline').datepicker();
-  
-  jQuery('#datepicker-multiple').datepicker({
-    numberOfMonths: 3,
-    showButtonPanel: true
-  });
-  
-
+  //jQuery('#datepicker').datepicker();
+  $('#datepicker').datepicker({ dateFormat: 'yy-mm-dd' }).val();
+ 
 });
 </script>
