--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -12,7 +12,7 @@
 
 <div class="panel panel-default">
 <div class="panel-body"> 
-	<div class="index_page_btns">
+	<div class="index_page_btns" data-no-turbolink>
         <%=link_to 'Import School List', new_school_path, :class=>"btn btn-success btn-xs"%>
 		<%=link_to 'Download Sample', new_school_path, :class=>"btn btn-success btn-xs"%>
 		<%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%>
