--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New user</h1>
-
+<div class="pageheader" data-no-turbolink>
+   <h2><i class="glyphicon glyphicon-book"></i> Add User <!-- <span>Subtitle goes here...</span> --></h2>
+   <div class="breadcrumb-wrapper">
+     <span class="label">You are here:</span>
+     <ol class="breadcrumb">
+         <li><%= link_to 'Dashboard', root_path %></li>
+         <li><%= link_to 'User List', users_path %></li>
+         <li class="active">Add User </li>
+     </ol>
+   </div>
+</div>
+ 
 <%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
