--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -17,13 +17,14 @@
 		<%=link_to 'Download Sample', new_school_path, :class=>"btn btn-success btn-xs"%>
 		<%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%>
 		<%=link_to 'Renew', new_school_path, :class=>"btn btn-success btn-xs"%>
-		<%=link_to 'Delete', new_school_path, :class=>"btn btn-success btn-xs"%>
+		<%=link_to 'Delete',delete_school_schools_path , :class=>"btn btn-success btn-xs delete-school-list", :remote => true %>
 	 </div>
 	 
 	 <div class="table-responsive">
 		<table class="table" id="table2">
             <thead>
                 <tr>
+                	<th><%= check_box_tag 'school_id[]', '', false, :class => "select-all-school" %></th>
                     <th>School Code</th>
                     <th>School Name</th>
                     <th>District</th>
@@ -39,6 +40,7 @@
               <tbody>
 				 <% @schools.each do |school| %>
                  <tr class="odd gradeX">
+                 	  <td class=""><%= check_box_tag 'school_ids[]', school.id, false, :id => "school_ids_#{school.id}", :class => "school-check-box" %></td>	
                       <td class=""><%= school.code %></td>
                       <td class=""><%= school.name %></td>
                       <td class=""><%= school.district %></td>
@@ -59,38 +61,3 @@
 </div>
 </div>		  
 
-<script>
-  jQuery(document).ready(function() {
-    
-    jQuery('#table2').dataTable({
-      "sPaginationType": "full_numbers"
-    });
-    
-    // Chosen Select
-    jQuery("select").chosen({
-      'min-width': '100px',
-      'white-space': 'nowrap',
-      disable_search_threshold: 10
-    });
-    
-    // Delete row in a table
-    jQuery('.delete-row').click(function(){
-      var c = confirm("Continue delete?");
-      if(c)
-        jQuery(this).closest('tr').fadeOut(function(){
-          jQuery(this).remove();
-        });
-        
-        return false;
-    });
-    
-    // Show aciton upon row hover
-    jQuery('.table-hidaction tbody tr').hover(function(){
-      jQuery(this).find('.table-action-hide a').animate({opacity: 1});
-    },function(){
-      jQuery(this).find('.table-action-hide a').animate({opacity: 0});
-    });
-  
-  
-  });
-</script>
