--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,26 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="col-md-7">
+    <div class="signin-info">
+        <div class="logopanel">
+            <h1><span>[</span> BTG <span>]</span></h1>
+        </div>
+		<div class="mb20"></div>
+            <h5><strong>Welcome to Books That Grow Admin Portal!</strong></h5>
+                <ul>
+                    <li><i class="fa fa-arrow-circle-o-right mr5"></i> Web Admin Portal</li>
+                    <li><i class="fa fa-arrow-circle-o-right mr5"></i> School Admin Login</li>
+                    <li><i class="fa fa-arrow-circle-o-right mr5"></i> Teacher Login</li>
+                    <li><i class="fa fa-arrow-circle-o-right mr5"></i> Classroom Management</li>
+                    <li><i class="fa fa-arrow-circle-o-right mr5"></i> Student Management</li>
+                </ul>
+         <div class="mb20"></div>
+   </div>
+</div>
+<div class="col-md-5">
+	<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :class=>"form_validation" }) do |f| %>
+	  <%= devise_error_messages! %>
+        <h4 class="nomargin">Forgot your password?</h4>
+        <%= f.email_field :email, :autofocus => true, :class => "form-control uname", :required=>true, :placeholder=>"Email" %>
+		<small><%= render "devise/shared/links" %></small>
+		<%= f.submit "Send me reset password instructions", :class => "btn btn-success btn-block" %>
+    <% end %>
+</div>
