--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -8,10 +8,13 @@
   <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
   <title>Bracket Responsive Bootstrap3 Admin</title>
-
-  <link href="css/style.default.css" rel="stylesheet">
-
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <%= stylesheet_link_tag "style.default.css" %>
+  <%= stylesheet_link_tag "jquery.gritter.css" %>
+  <%= stylesheet_link_tag "bootstrap.min.css" %>
+  <%= stylesheet_link_tag "bootstrap-override.css" %>
+  <%= stylesheet_link_tag "custom.css" %>
+  
+ <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
   <script src="js/html5shiv.js"></script>
   <script src="js/respond.min.js"></script>
@@ -19,78 +22,41 @@
 </head>
 
 <body class="signin">
-
-<!-- Preloader -->
 <div id="preloader">
     <div id="status"><i class="fa fa-spinner fa-spin"></i></div>
 </div>
-
 <section>
-  
     <div class="signinpanel">
-        
         <div class="row">
-            
-            <div class="col-md-7">
-                
-                <div class="signin-info">
-                    <div class="logopanel">
-                        <h1><span>[</span> bracket <span>]</span></h1>
-                    </div><!-- logopanel -->
-                
-                    <div class="mb20"></div>
-                
-                    <h5><strong>Welcome to Bracket Bootstrap 3 Template!</strong></h5>
-                    <ul>
-                        <li><i class="fa fa-arrow-circle-o-right mr5"></i> Fully Responsive Layout</li>
-                        <li><i class="fa fa-arrow-circle-o-right mr5"></i> HTML5/CSS3 Valid</li>
-                        <li><i class="fa fa-arrow-circle-o-right mr5"></i> Retina Ready</li>
-                        <li><i class="fa fa-arrow-circle-o-right mr5"></i> WYSIWYG CKEditor</li>
-                        <li><i class="fa fa-arrow-circle-o-right mr5"></i> and much more...</li>
-                    </ul>
-                    <div class="mb20"></div>
-                    <strong>Not a member? <a href="signup.html">Sign Up</a></strong>
-                </div><!-- signin0-info -->
-            
-            </div><!-- col-sm-7 -->
-            
-            <div class="col-md-5">
-                
-                <form method="post" action="index.html">
-                    <h4 class="nomargin">Sign In</h4>
-                    <p class="mt5 mb20">Login to access your account.</p>
-                
-                    <input type="text" class="form-control uname" placeholder="Username" />
-                    <input type="password" class="form-control pword" placeholder="Password" />
-                    <a href=""><small>Forgot Your Password?</small></a>
-                    <button class="btn btn-success btn-block">Sign In</button>
-                    
-                </form>
-            </div><!-- col-sm-5 -->
-            
-        </div><!-- row -->
-        
+			<% flash.each do |key, value| %>
+				<div class="alert alert-info"> <%= value %>
+		        		<!-- <button class="close" data-dismiss="alert"></button> -->
+						<button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+		        	</div>
+			<% end %>
+            <%=yield%>
+        </div>
         <div class="signup-footer">
             <div class="pull-left">
-                &copy; 2014. All Rights Reserved. Bracket Bootstrap 3 Admin Template
+                &copy; <%= Time.now.year %>. All Rights Reserved. Books That Grow
             </div>
             <div class="pull-right">
-                Created By: <a href="http://themepixels.com/" target="_blank">ThemePixels</a>
+                <!-- Created By: <a href="http://themepixels.com/" target="_blank">ThemePixels</a> -->
             </div>
         </div>
-        
-    </div><!-- signin -->
-  
+    </div>
 </section>
 
-
-<script src="js/jquery-1.10.2.min.js"></script>
-<script src="js/jquery-migrate-1.2.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/modernizr.min.js"></script>
-<script src="js/retina.min.js"></script>
-
-<script src="js/custom.js"></script>
+<%= javascript_include_tag "1_jquery-1.10.2.js" %>
+<%= javascript_include_tag "jquery-migrate-1.2.1.min.js" %>
+<%= javascript_include_tag "bootstrap.js" %>
+<%= javascript_include_tag "modernizr.min.js" %>
+<%= javascript_include_tag "retina.min.js" %>
+<%= javascript_include_tag "custom.js" %>
+<%= javascript_include_tag "jquery.validate.js" %>
+<%= javascript_include_tag "required_field_validation.js" %>
+<%= javascript_include_tag "toggles.min.js" %>
+<%= javascript_include_tag "jquery.cookies.js" %>
 
 </body>
 </html>
