--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="pageheader">
    <h2><i class="fa fa-table"></i> School List <!-- <span>Subtitle goes here...</span> --></h2>
    <div class="breadcrumb-wrapper">
@@ -17,7 +18,7 @@
 		<%=link_to 'Download Sample', new_school_path, :class=>"btn btn-success btn-xs"%>
 		<%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%>
 		<%=link_to 'Renew', new_school_path, :class=>"btn btn-success btn-xs"%>
-		<%=link_to 'Delete',delete_school_schools_path , :class=>"btn btn-success btn-xs delete-school-list", :remote => true %>
+		<%=link_to 'Delete',delete_school_schools_path, :class=>"btn btn-success btn-xs delete-school-list", :id => 'delete_school_list', :remote => true %>
 	 </div>
 	 
 	 <div class="table-responsive">
@@ -61,3 +62,6 @@
 </div>
 </div>		  
 
+<div data-no-turbolink>
+	<%= paginate @schools %>
+</div>
