--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,3 +22,8 @@ form .form-group {margin-bottom: 15px !important;}
 
 .alert-alert{background-color: #f2dede; border-color: #ebccd1; color: #a94442;}
 small br {display:none;}
+
+span.page{padding: 10px !important;}
+#example_info{padding-right: 10px !important;}
+.delete-school-list{height:27px !important;}
+.delete-user-list{height:27px !important;}
