--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -7,9 +7,10 @@
     paginator:     the paginator that renders the pagination tags inside
 -%>
 <%= paginator.render do -%>
-  <nav class="pagination">
-    <%= first_page_tag unless current_page.first? %>
-    <%= prev_page_tag unless current_page.first? %>
+  <nav class="dataTables_paginate paging_bootstrap pagination">
+  	<div class="dataTables_info" id="example_info">Showing <b><%= current_page%> to <%= per_page%></b> of <%= total_pages * per_page %> entries</div>
+    <%= first_page_tag %>
+    <%= prev_page_tag %>
     <% each_page do |page| -%>
       <% if page.left_outer? || page.right_outer? || page.inside_window? -%>
         <%= page_tag page %>
@@ -17,7 +18,7 @@
         <%= gap_tag %>
       <% end -%>
     <% end -%>
-    <%= next_page_tag unless current_page.last? %>
-    <%= last_page_tag unless current_page.last? %>
+    <%= next_page_tag %>
+    <%= last_page_tag %>
   </nav>
 <% end -%>
