--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -11,6 +11,7 @@
    </div>
 </div>
 
+<%= form_tag 'schools/delete_school', multipart: true, remote: true do %>
 <div class="panel panel-default">
 <div class="panel-body"> 
 	<div class="index_page_btns" data-no-turbolink>
@@ -18,7 +19,7 @@
 		<%=link_to 'Download Sample', new_school_path, :class=>"btn btn-success btn-xs"%>
 		<%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%>
 		<%=link_to 'Renew', new_school_path, :class=>"btn btn-success btn-xs"%>
-		<%=link_to 'Delete',delete_school_schools_path, :class=>"btn btn-success btn-xs delete-school-list", :id => 'delete_school_list', :remote => true %>
+		<%=submit_tag 'Delete', :class=>"btn btn-success btn-xs delete-school-list", data: { confirm: 'Are you sure?' } %>
 	 </div>
 	 
 	 <div class="table-responsive">
@@ -41,7 +42,7 @@
               <tbody>
 				 <% @schools.each do |school| %>
                  <tr class="odd gradeX">
-                 	  <td class=""><%= check_box_tag 'school_ids[]', school.id, false, :id => "school_ids_#{school.id}", :class => "school-check-box" %></td>	
+                 	  <td class=""><%= check_box_tag 'school_ids[]', school.id, false, :class => "school-check-box" %></td>	
                       <td class=""><%= school.code %></td>
                       <td class=""><%= school.name %></td>
                       <td class=""><%= school.district %></td>
@@ -60,8 +61,9 @@
         </tbody>
     </table>
 </div>
-</div>		  
 
-<div data-no-turbolink>
-	<%= paginate @schools %>
-</div>
+	<div data-no-turbolink>
+		<%= paginate @schools %>
+	</div>	
+</div>		  
+<% end %>		  
