Added bigint datatype for all primary key and removed some unnecessary model and migration file.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,3 +27,6 @@ span.page{padding: 10px !important;}
 #example_info{padding-right: 10px !important;}
 .delete-school-list{height:27px !important;}
 .delete-user-list{height:27px !important;}
+.btn-white{height:27px ; padding: 1px 6px !important;}
+.btn-primary{height:27px !important;} 
+
