--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,11 @@
 <div class="pageheader" data-no-turbolink>
-   <h2><i class="glyphicon glyphicon-book"></i> Add User <!-- <span>Subtitle goes here...</span> --></h2>
+   <h2><i class="glyphicon glyphicon-book"></i> Add Web Admin <!-- <span>Subtitle goes here...</span> --></h2>
    <div class="breadcrumb-wrapper">
      <span class="label">You are here:</span>
      <ol class="breadcrumb">
          <li><%= link_to 'Dashboard', root_path %></li>
-         <li><%= link_to 'User List', users_path %></li>
-         <li class="active">Add User </li>
+         <li><%= link_to 'Web Admin List', users_path %></li>
+         <li class="active">Add Web Admin </li>
      </ol>
    </div>
 </div>
