--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -11,7 +11,7 @@
    </div>
 </div>
 
-<%= form_tag 'schools/delete_school', multipart: true, remote: true do %>
+<%= form_tag 'schools/delete_school', remote: true do %>
 <div class="panel panel-default">
 <div class="panel-body"> 
 	<div class="index_page_btns" data-no-turbolink>
