--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -23,7 +23,7 @@
 	                <div class="col-sm-3">
 	                    <div class="form-group">
 	                    	<%= f.label :code, "School Code", :class=>"control-label" %><span class="asterisk">*</span>
-		    			    <%= f.number_field :code, :class=>"form-control" %>
+		    			    <%= f.text_field :code, :class=>"form-control"%>
 	                    </div>
 	                </div>
 	               <% end %> 
