--- a/app/views/accessrights/new.html.erb
+++ b/app/views/accessrights/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New accessright</h1>
+<div class="pageheader" data-no-turbolink>
+   <h2><i class="glyphicon glyphicon-ban-circle"></i> Add Access Rights <!-- <span>Subtitle goes here...</span> --></h2>
+   <div class="breadcrumb-wrapper">
+     <span class="label">You are here:</span>
+     <ol class="breadcrumb">
+         <li><%= link_to 'Dashboard', root_path %></li>
+         <!-- <li><%#= link_to 'Access Right Listing', accessrights_path %></li> -->
+         <li class="active">Add Access Right </li>
+     </ol>
+   </div>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', accessrights_path %>
+<%=form_tag(accessrights_path, :class=>"form_validation") do%>
+	<%= render 'form' %>
+<%end%>
