--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -7,7 +7,7 @@
   <meta name="author" content="">
   <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
-  <title>Bracket Responsive Bootstrap3 Admin</title>
+  <title>Books That Grow</title>
   <%= stylesheet_link_tag "style.default.css" %>
   <%= stylesheet_link_tag "jquery.gritter.css" %>
   <%= stylesheet_link_tag "bootstrap.min.css" %>
