--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -17,7 +17,7 @@
 	<div class="index_page_btns" data-no-turbolink>
         <%=link_to 'Import School List', new_school_path, :class=>"btn btn-success btn-xs"%>
 		<%=link_to 'Download Sample', new_school_path, :class=>"btn btn-success btn-xs"%>
-		<%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%>
+		<% if can? :create, School %> <%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%> <%end%>
 		<%=link_to 'Renew', new_school_path, :class=>"btn btn-success btn-xs"%>
 		<%=submit_tag 'Delete', :class=>"btn btn-success btn-xs delete-school-list", data: { confirm: 'Are you sure?' } %>
 	 </div>
@@ -53,8 +53,11 @@
 					  <td class="center "></td>
 					  <td class="center "></td>
    				      <td data-no-turbolink>
-						  <%= link_to '<i title="Edit School" class="fa fa-pencil"></i>'.html_safe, edit_school_path(school) %> 
-   				   	      <%= link_to '<i title="Archive School" class="glyphicon glyphicon-trash"></i>'.html_safe, school, method: :delete, data: { confirm: 'Are you sure?' } %>
+						  <% if can? :update, School %>
+						      <%= link_to '<i title="Edit School" class="fa fa-pencil"></i>'.html_safe, edit_school_path(school) %> 						  <%end%>
+   				   	      <% if can? :destroy, School %> 
+						      <%= link_to '<i title="Archive School" class="glyphicon glyphicon-trash"></i>'.html_safe, school, method: :delete, data: { confirm: 'Are you sure?' } %> 
+					      <%end%>
 					</td>
                  </tr>
 				 <% end %>
