--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -53,7 +53,7 @@
 	  	            <%end%>
                 </address>
 			    <div data-no-turbolink>
-			        <%= link_to 'Edit', edit_school_path(@school), class: "btn btn-primary", data: { disable_with: 'Saving...' } %>
+			        <%= link_to 'Edit', edit_school_path(@school), class: "btn btn-primary" %>
 			        <%= link_to 'Cancel', schools_path, class: "btn btn-white"%>
         	    </div>
 		    </div>
