--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -23,7 +23,7 @@
 	 </div>
 	 
 	 <div class="table-responsive">
-		<table class="table" id="table2">
+		<table class="table" id="school_table">
             <thead>
                 <tr>
                 	<th><%= check_box_tag 'school_id[]', '', false, :class => "select-all-school" %></th>
