implementation of countrywise statelist,button size changes,client side validation for password_confirmation

--- a/app/views/accessrights/_form.html.erb
+++ b/app/views/accessrights/_form.html.erb
@@ -34,10 +34,14 @@
 			<%=hidden_field_tag('checked_list[]')%>
 			<%=hidden_field_tag('unchecked_list[]')%>
 	        <div class="panel-footer" data-no-turbolink>
-	            <%= submit_tag "Save", class: "btn btn-primary", data: { disable_with: 'Saving...' } %>
-				<%= link_to 'Cancel', accessrights_path, class: "btn btn-white"%>
+	            <%= submit_tag "Save", class: "btn btn-primary btn-sm", data: { disable_with: 'Saving...' } %>
+				<%= link_to 'Cancel', accessrights_path, class: "btn btn-white btn-xs"%>
 	        </div>
 			
 	    </div>
     </div>       
 </div>
+
+<script type="text/javascript">
+	showHideMenu('li_accessright');
+</script>	
