--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -63,20 +63,24 @@
 			    			<%= f.text_field :city, :class=>"form-control" %>
 	                    </div>
 	                </div>
-	                <div class="col-sm-6">
-	                    <div class="form-group">
-		   			    	<%= f.label :state, :class=>"control-label"%>
-		   			    	<%= f.text_field :state, :class=>"form-control" %>
-	                    </div>
-	                </div>
 	            </div>
 	            <div class="row">
 	                <div class="col-sm-6">
 	                    <div class="form-group">
-			    			<%= f.label :country, :class=>"control-label" %>
-			    			<%= f.text_field :country, :class=>"form-control" %>
+			    			<%#= f.label :country, :class=>"control-label" %>
+			    			<%#= f.text_field :country, :class=>"form-control" %>
+			    			 <%= f.label :country %><br />
+  							 <%= f.country_select :country, {priority: %w(US)}, :disabled => true %>
 	                    </div>
 	                </div>
+	                <div class="col-sm-6">
+	                    <div class="form-group">
+		   			    	 <%= f.label :state %><br />
+ 							 <%= render partial: 'subregion_select', locals: {parent_region: f.object.country} %>
+	                    </div>
+	                </div>
+	                
+	                
 	            </div>
 				<%=f.fields_for :licenses,@licenses do |lic|%>
 	            <div class="row">
@@ -102,15 +106,17 @@
 				<%end%>	
 	        </div><!-- panel-body -->
 	        <div class="panel-footer" data-no-turbolink>
-	            <%= f.submit "Save", class: "btn btn-primary", data: { disable_with: 'Saving...' } %>
-				<%= link_to 'Cancel', schools_path, class: "btn btn-white"%>
+	            <%= f.submit "Save", class: "btn btn-primary btn-sm", data: { disable_with: 'Saving...' } %>
+				<%= link_to 'Cancel', schools_path, class: "btn btn-white btn-xs"%>
 	        </div>
 			<% end %>
 	    </div>
     </div>       
 </div>
 
-<script>
+<script type="text/javascript">
+	showHideMenu('li_school');
+	   
 jQuery(document).ready(function(){
     
    // Date Picker
@@ -119,3 +125,5 @@ jQuery(document).ready(function(){
  
 });
 </script>
+
+
