--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -1,7 +1,10 @@
 <div class="col-md-7">
+	<% flash.each do |key, value| %>
+       <div class="alert alert-<%= key %>"> <%= value %></div>
+    <% end %>
     <div class="signin-info">
         <div class="logopanel">
-            <h1><span>[</span> BTG <span>]</span></h1>
+            <h1><span>[</span> Books That Grow<span>]</span></h1>
         </div>
 		<div class="mb20"></div>
             <h5><strong>Welcome to Books That Grow Admin Portal!</strong></h5>
@@ -16,11 +19,17 @@
    </div>
 </div>
 <div class="col-md-5">
-	<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :class=>"form_validation" }) do |f| %>
-	  <%= devise_error_messages! %>
-        <h4 class="nomargin">Forgot your password?</h4>
-        <%= f.email_field :email, :autofocus => true, :class => "form-control uname", :required=>true, :placeholder=>"Email" %>
-		<small><%= render "devise/shared/links" %></small>
-		<%= f.submit "Send me reset password instructions", :class => "btn btn-success btn-block" %>
+    <%= form_tag( email_for_password_users_path, :method => "post",  :id=>"forgot_password_form", :class=>"form_validation") do %>
+        <h4 class="nomargin">Forgot password</h4>
+        <p class="mt5 mb20">Enter email to login and access your account.</p>
+		<%= text_field_tag 'email' , nil, placeholder: 'Email Address', :required=>true, :class=>"form-control uname"  %>
+		<%= submit_tag "Submit", class: "btn btn-success btn-cons ", data: { disable_with: 'Saving...' } %>
+		<%= link_to 'Back', signin_path ,class: "btn btn-white btn-cons" %>
+        
     <% end %>
 </div>
+
+
+
+
+
