--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
             <div class="media userlogged">
 				<%= image_tag("loggeduser.png", :class=>"media-object")%>
                 <div class="media-body">
-                    <h4><%=current_user.first_name%></h4>
+                    <h4><%=current_user.first_name unless current_user.blank?%></h4>
                 </div>
             </div>
             <h5 class="sidebartitle actitle">Account</h5>
@@ -39,14 +39,16 @@
       <ul class="nav nav-pills nav-stacked nav-bracket page-sidebar" data-no-turbolink>
 		<li class="active"><%= link_to '<i class="fa fa-home"></i>'.html_safe + "Dashboard", root_path %></li>
 		<li class="nav-parent"><a href=""><i class="glyphicon glyphicon-book"></i> <span>School</span></a>
-          <ul class="children">
+          <% unless current_user.blank?%>
+		  <ul class="children">
 		      <% if can? :create, School %> 
 			      <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add School", new_school_path %></li>
 			  <%end%>
 			  <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School Listing", schools_path %></li>
           </ul>
         </li>
-		<% if current_user.role_id.eql?(1)%>
+		
+		<%#= if current_user.role_id.eql?(1)%>
 		<li class="nav-parent"><%= link_to '<i class="glyphicon glyphicon-user"></i>'.html_safe + "Web Admin", root_path %>
           <ul class="children">
              <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Web Admin", new_user_path %></li>
@@ -59,6 +61,7 @@
             <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Access Right Listing", accessrights_path %></li>
           </ul
         </li>
+		<%#=end%>
 		<%end%>
       </ul>
     </div>
@@ -72,11 +75,11 @@
             <div class="btn-group">
               <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 				<%= image_tag("loggeduser.png")%>
-				<%=current_user.first_name%>
+				<%=current_user.first_name unless current_user.blank?%>
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
-				<li><%= link_to '<i class="glyphicon glyphicon-log-out"></i>'.html_safe + "Log Out", destroy_user_session_path, method: :delete %></li>
+				<li><%= link_to '<i class="glyphicon glyphicon-log-out"></i>'.html_safe + "Log Out", signout_path, method: :delete %></li>
               </ul>
             </div>
           </li>
